--- a/www/index.html
+++ b/www/index.html
@@ -5,14 +5,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="viewport" content="user-scalable=no">
-    <title>OMORI</title>
-    <script>
-        if (window.nw.App.argv.length < 1) {
-            alert("OMORI must be launched directly from Steam.");
-            process.exit(0);
-        }
-    </script>
 
+    <script src="modloader/mime.js"></script>
     <script src="modloader/lib/fast-json-patch.min.js"></script>
     <script src="modloader/lib/imagediff2.js"></script>
     <script src="modloader/lib/mime.js"></script>
